<resources>
    <string name="app_name">智慧式</string>
    <string name="network_error">网络错误</string>
    <string name="loading_data">正在加载</string>
    <string name="scene_device">场景设备</string>
    <string name="add_device">添加场景设备</string>
    <string name="add_family">添加家人</string>
    <string name="revise_family">修改家人</string>
    <string name="revise_sure">确定修改</string>
    <string name="add_sure">确定添加</string>
    <string name="about_us">关于我们</string>
    <string name="feed_back">意见反馈</string>
    <string name="forget_pswd">忘记密码</string>
    <string name="my_adress">住宅信息</string>
    <string name="my_family">我的家人</string>
    <string name="pay">在线缴费</string>
    <string name="question">常见问题</string>
    <string name="setting">设置</string>
    <string name="reset_pswd">修改密码</string>
    <string name="news_warning">消息提醒</string>
    <string name="exist">退出登录</string>
    <string name="name">姓名</string>
    <string name="phone">手机号</string>
    <string name="email">邮箱</string>
    <string name="my_mall">我的商城</string>
    <string name="add_scene">自定义场景</string>
    <string name="more_scene">更多场景</string>
    <string name="scene_setting">场景修改</string>
    <string name="device_setting">设备管理</string>
    <string name="produce_setting">产品名称</string>
    <string name="news">智慧生活</string>
    <string name="commit">保存</string>
    <string name="my_device">我的设备</string>
    <string name="receive_news">提醒方式</string>
    <string name="voice">二级消息</string>
    <string name="shake">提醒类型</string>
    <string name="change_name">修改姓名</string>
    <string name="curtain">智能窗帘</string>
    <string name="news_detail">信息详情</string>
    <string name="family_control">家庭管理</string>
    <string name="change_device_name">修改设备名称</string>
    <string name="leakage_induction">漏水感应器</string>
    <string name="air_induction">漏气感应器</string>
    <string name="electric_monitor">单相电监测器</string>
    <string name="combustible">有毒气体监测仪</string>
    <string name="concentrator">环境检测仪</string>
    <string name="smartswitch">智能开关</string>
    <string name="reget_check_code">重新发送</string>
    <string name="password_length_error">请输入6-12位字母、数字组成的密码</string>
    <string name="password_equals_error">您两次密码输入不一致，请检查</string>
    <string name="incorrect_input_code">验证码输入有误</string>
    <string name="code_null">验证码不能为空</string>
    <string name="add_family_name">请输入家人姓名</string>
    <string name="add_family_phone">请输入家人手机号</string>
    <string name="input_current_phone">请输入正确的手机号</string>
    <string name="send_success">发送成功</string>
    <string name="second_resend">秒后重发</string>
    <string name="type1">只重复一次</string>
    <string name="type2">周一到周五</string>
    <string name="type3">周末</string>
    <string name="type4">每天</string>
    <string name="alreadyLastest">已经是最新版本</string>
    <string name="loadmore">加载更多</string>
</resources>