<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_personnal_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg"
    android:orientation="vertical"
    tools:context="com.zhs.zhs.activity.PersonnalSettingActivity">


    <RelativeLayout
        android:id="@+id/personnal_setting"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/news_warning"
        android:background="@color/white"
        android:clickable="true"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/marginlarge"
            android:src="@mipmap/ic_into" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:drawableLeft="@mipmap/ic_news"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="个人信息"
            android:textColor="@color/text_color"
            android:textSize="17sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/news_warning"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/reset_pswd"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:clickable="true"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/marginlarge"
            android:src="@mipmap/ic_into" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:drawableLeft="@mipmap/ic_news"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="@string/news_warning"
            android:textColor="@color/text_color"
            android:textSize="17sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/reset_pswd"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:clickable="true"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/marginlarge"
            android:src="@mipmap/ic_into" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:drawableLeft="@mipmap/ic_resetpsad"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="@string/reset_pswd"
            android:textColor="@color/text_color"
            android:textSize="17sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/exist"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="300dp"
        android:background="@color/base_color"
        android:clickable="true"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:padding="8dp"
            android:text="@string/exist"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </RelativeLayout>

</LinearLayout>
