<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_news_warning"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg"
    tools:context="com.zhs.zhs.activity.NewsWarningActivity">

    <RelativeLayout
        android:id="@+id/reminder_mode"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:clickable="true"
        android:gravity="center_vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="@dimen/marginlarge"
            android:src="@mipmap/ic_into" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="@string/receive_news"
            android:textColor="@color/text_color"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/mode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="短信"
            android:textSize="17sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/second_reminder"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/reminder_mode"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:clickable="true"
        android:gravity="center_vertical"
        android:visibility="gone">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/marginlarge"
            android:background="@drawable/btn_switch_selector"
            android:button="@null"
            android:checked="true"
            android:src="@mipmap/ic_into" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="@string/voice"
            android:textColor="@color/text_color"
            android:textSize="17sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reminder_type"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/second_reminder"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:clickable="true"
        android:gravity="center_vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="@string/shake"
            android:textColor="@color/text_color"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/marginlarge"
            android:src="@mipmap/ic_into" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/start_time"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/reminder_type"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:clickable="true"
        android:gravity="center_vertical"
        android:visibility="gone">


        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="免打扰开始时间"
            android:textColor="@color/text_color"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/text"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="0 时 0 分"
            android:textColor="@color/text_color"
            android:textSize="17sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/end_time"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/start_time"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:clickable="true"
        android:gravity="center_vertical"
        android:visibility="gone">


        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="免打扰结束时间"
            android:textColor="@color/text_color"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/text1"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="0 时 0 分"
            android:textColor="@color/text_color"
            android:textSize="17sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/commit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:background="@drawable/bg_base"
        android:text="完成"
        android:textColor="@color/white" />
</RelativeLayout>